# Norse

./: .gitignore  CMakeLists.txt  README.md
NorseNet/include/: args.h  individual.h  node.h  norse.h  utils.h
NorseNet/sources/: args.cpp  genome.cpp  individual.cpp  node.cpp  norse.cpp  utils.cpp
python/: CMakeLists.txt  LycorisNet.cpp  README.md
